# climsg

./: Cargo.toml
examples/: json.rs  text.rs  xargs-sample.txt  xargs.rs
src/: lib.rs  macros.rs  visitors.rs
src/visitors/: ignore_scoped.rs  json.rs  text.rs
