[package]
name = "climsg"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.110"
serde_json = "1.0.53"
erased-serde = "0.3.11"

[dev-dependencies]
clap = {version = "2.33.1", default-features = false}
