[package]
name = "climsg"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
serde = "1.0.110"
serde_json = "1.0.53"
erased-serde = "0.3.11"
console = { version = "0.11.2", default-features = false }

[dev-dependencies]
clap = {version = "2.33.1", default-features = false}
